moved notification button into main section to avoid clash with header on smaller screen sizes

--- a/src/client/Components/Profile/Profile.module.css
+++ b/src/client/Components/Profile/Profile.module.css
@@ -18,7 +18,7 @@ body{
 }
 .buttonContainer {
   display: flex;
-  gap: 10px; /* Adds space between buttons */
+  gap: 0.625rem; /* Adds space between buttons */
 }
 .container {
   font-family: 'Arial', sans-serif;
@@ -35,6 +35,7 @@ body{
 
 .main {
   padding: 2rem 0;
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -167,15 +168,16 @@ p, h5 {
 }
 
 .notificationButton {
-  position: fixed;
-  top: 10px;
-  left: 10px;
+  position: absolute;
+  top: -0.5rem; 
+  left: 0.5rem; 
   background: black;
   border: none;
   cursor: pointer;
-  display: flex;
-  font-size: 24px;
-  margin-top: 15px;
+  flex: 1;
+  font-size: 1.5rem;
+  margin-top: 1rem;
+  transition: transform 0.3s ease;
 }
 
 @keyframes moveBell {
@@ -186,7 +188,7 @@ p, h5 {
   100% { transform: translateX(0); }
 }
 
-.notificationButton {
+/* .notificationButton {
   position: fixed;
   top: 10px;
   left: 10px;
@@ -196,8 +198,8 @@ p, h5 {
   display: flex;
   font-size: 24px;
   margin-top: 15px;
-  transition: transform 0.3s ease;
-}
+
+} */
 
 .notificationButton:hover {
   animation: moveBell 0.5s;
